diesel_compile_tests/tests/fail/mysql_on_conflict_tests.stderr
error[E0277]: `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_on_conflict_tests.rs:43:18
   |
43 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<columns::name>, diesel::query_builder::upsert::on_conflict_actions::DoNothing<users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: consider using `--verbose` to print the full type name to the console
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action, diesel::query_builder::where_clause::WhereClause<Expr>> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB, SD>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>>
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Mysql>`
   = note: 1 redundant requirement hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Mysql>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_on_conflict_tests.rs:49:18
   |
49 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(columns::id, columns::name)>, diesel::query_builder::upsert::on_conflict_actions::DoNothing<users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: consider using `--verbose` to print the full type name to the console
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action, diesel::query_builder::where_clause::WhereClause<Expr>> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB, SD>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>>
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Mysql>`
   = note: 1 redundant requirement hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Mysql>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>: diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` is not satisfied
  --> tests/fail/mysql_on_conflict_tests.rs:53:22
   |
53 |         .on_conflict((dsl::DuplicatedKeys, name))
   |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` is not implemented for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<Table>`:
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(T,)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5, T6)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
           and $N others
note: required by a bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
  --> $DIESEL/src/upsert/on_conflict_extension.rs
   |
   |     pub fn on_conflict<Target>(
   |            ----------- required by a bound in this associated function
...
   |         ConflictTarget<Target>: OnConflictTarget<T>,
   |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`

error[E0277]: `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_on_conflict_tests.rs:55:18
   |
55 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>, diesel::query_builder::upsert::on_conflict_actions::DoNothing<users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: consider using `--verbose` to print the full type name to the console
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action, diesel::query_builder::where_clause::WhereClause<Expr>> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB, SD>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>>
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Mysql>`
   = note: 1 redundant requirement hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Mysql>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_on_conflict_tests.rs:62:18
   |
62 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<SqlLiteral<_>>, diesel::query_builder::upsert::on_conflict_actions::DoNothing<users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: consider using `--verbose` to print the full type name to the console
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action, diesel::query_builder::where_clause::WhereClause<Expr>> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB, SD>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>>
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Mysql>`
   = note: 1 redundant requirement hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Mysql>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_on_conflict_tests.rs:70:18
   |
70 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is not implemented for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<DuplicatedKeys>, diesel::query_builder::upsert::on_conflict_actions::DoUpdate<diesel::query_builder::update_statement::changeset::Assign<diesel::query_builder::update_statement::changeset::ColumnWrapperForUpdate<columns::name>, diesel::query_builder::upsert::on_conflict_actions::Excluded<columns::name>>, users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: consider using `--verbose` to print the full type name to the console
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action, diesel::query_builder::where_clause::WhereClause<Expr>> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB, SD>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<DB>>
             <diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<Values, Target, Action> as QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>>
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Mysql>`
   = note: 1 redundant requirement hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Mysql>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<DuplicatedKeys>` is no valid SQL fragment for the `Pg` backend
  --> tests/fail/mysql_on_conflict_tests.rs:79:18
   |
79 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<DuplicatedKeys>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<DuplicatedKeys>, diesel::query_builder::upsert::on_conflict_actions::DoNothing<users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Pg` database system does not support
           this SQL syntax
   = help: the trait `QueryFragment<Mysql, mysql::backend::MysqlOnConflictClause>` is implemented for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<DuplicatedKeys>`
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Pg, pg::backend::PgOnConflictClause>`
   = note: 2 redundant requirements hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Pg>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(columns::name, DuplicatedKeys)>: diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` is not satisfied
  --> tests/fail/mysql_on_conflict_tests.rs:83:22
   |
83 |         .on_conflict((name, dsl::DuplicatedKeys))
   |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` is not implemented for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(columns::name, DuplicatedKeys)>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<Table>`:
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(T,)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5, T6)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
           and $N others
note: required by a bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
  --> $DIESEL/src/upsert/on_conflict_extension.rs
   |
   |     pub fn on_conflict<Target>(
   |            ----------- required by a bound in this associated function
...
   |         ConflictTarget<Target>: OnConflictTarget<T>,
   |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`

error[E0277]: `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(columns::name, DuplicatedKeys)>` is no valid SQL fragment for the `Pg` backend
  --> tests/fail/mysql_on_conflict_tests.rs:85:18
   |
85 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(columns::name, DuplicatedKeys)>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(columns::name, DuplicatedKeys)>, diesel::query_builder::upsert::on_conflict_actions::DoNothing<users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Pg` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(T,)> as QueryFragment<DB, SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5, T6)> as QueryFragment<_DB, _SP>>
           and $N others
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Pg, pg::backend::PgOnConflictClause>`
   = note: 2 redundant requirements hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Pg>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>: diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` is not satisfied
  --> tests/fail/mysql_on_conflict_tests.rs:89:22
   |
89 |         .on_conflict((dsl::DuplicatedKeys, name))
   |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` is not implemented for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<Table>`:
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(T,)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5, T6)> as diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<<_T as Column>::Source>>
           and $N others
note: required by a bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
  --> $DIESEL/src/upsert/on_conflict_extension.rs
   |
   |     pub fn on_conflict<Target>(
   |            ----------- required by a bound in this associated function
...
   |         ConflictTarget<Target>: OnConflictTarget<T>,
   |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`

error[E0277]: `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>` is no valid SQL fragment for the `Pg` backend
  --> tests/fail/mysql_on_conflict_tests.rs:91:18
   |
91 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>`, which is required by `InsertStatement<users::table, diesel::query_builder::upsert::on_conflict_clause::OnConflictValues<diesel::query_builder::insert_statement::ValuesClause<(ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>, ColumnInsertValue<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>), users::table>, diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(DuplicatedKeys, columns::name)>, diesel::query_builder::upsert::on_conflict_actions::DoNothing<users::table>>>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Pg` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(T,)> as QueryFragment<DB, SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5)> as QueryFragment<_DB, _SP>>
             <diesel::query_builder::upsert::on_conflict_target::ConflictTarget<(_T, T0, T1, T2, T3, T4, T5, T6)> as QueryFragment<_DB, _SP>>
           and $N others
   = note: required for `OnConflictValues<ValuesClause<(ColumnInsertValue<id, Bound<Integer, i32>>, ...), ...>, ..., ...>` to implement `QueryFragment<Pg, pg::backend::PgOnConflictClause>`
   = note: 2 redundant requirements hidden
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `QueryFragment<Pg>`
   = note: required for `InsertStatement<table, OnConflictValues<ValuesClause<(ColumnInsertValue<id, ...>, ...), ...>, ..., ...>>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
